--- a/src/_description/README.html
+++ b/src/_description/README.html
@@ -3,129 +3,11 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&amp;display=swap">
 <div class="photobox-main">
   <div class="photobox-banner">
-    <div class="photobox-icon-box">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1000 1000">
-        <defs>
-          <linearGradient id="linear-gradient" x1="701.5" y1="847" x2="701.5" y2="548" gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="gray"></stop>
-            <stop offset="1" stop-color="#4d4d4d"></stop>
-          </linearGradient>
-          <linearGradient id="linear-gradient-2" y1="548" y2="847" xlink:href="#linear-gradient"></linearGradient>
-          <linearGradient id="linear-gradient-3" x1="701.5" y1="806.77" x2="701.5" y2="588.23"
-            gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#333"></stop>
-            <stop offset="1" stop-color="#1a1a1a"></stop>
-          </linearGradient>
-          <linearGradient id="linear-gradient-4" y1="588.23" y2="806.77" xlink:href="#linear-gradient-3">
-          </linearGradient>
-        </defs>
-        <polygon points="574.91 340.89 368.8 391.16 285.86 289.36 353.72 273.02 574.91 340.89" class="cls-1"></polygon>
-        <polygon points="574.91 526.88 368.8 603.54 368.8 391.16 574.91 340.89 574.91 526.88" class="cls-2"></polygon>
-        <polygon points="368.8 603.54 184.07 490.44 187.84 306.96 368.8 391.16 368.8 603.54" class="cls-2"></polygon>
-        <polygon points="368.8 391.16 187.84 306.96 125 220.24 303.45 296.9 368.8 391.16" class="cls-2"></polygon>
-        <polygon points="574.91 340.89 353.72 273.02 400.22 175 639 237.84 574.91 340.89" class="cls-2"></polygon>
-        <g style="transform: translate(463px, 104px);">
-          <rect x="12" y="12" width="378" height="416" rx="30.82" class="cls-3"></rect>
-          <rect x="49" y="49" width="304" height="304" rx="30.82" class="cls-4"></rect>
-          <path
-            d="M79.82,353H322.18A30.82,30.82,0,0,0,353,322.18v-2L274,206q-11.89,18.21-25,37-16.06,23-32,44c-9.63-27.87-20.56-56.95-33-87-10.15-24.52-20.54-47.86-31-70q-40.87,55.62-82,114-11.1,15.76-22,31.44v46.74A30.82,30.82,0,0,0,79.82,353Z"
-            class="cls-5"></path>
-        </g>
-        <g>
-          <rect x="201" y="473" width="203" height="54" rx="27" class="cls-6"></rect>
-          <rect x="156" y="488" width="729" height="418" rx="17.2" class="cls-7"></rect>
-          <path
-            d="M867.8,491A14.22,14.22,0,0,1,882,505.2V888.8A14.22,14.22,0,0,1,867.8,903H173.2A14.22,14.22,0,0,1,159,888.8V505.2A14.22,14.22,0,0,1,173.2,491H867.8m0-6H173.2A20.2,20.2,0,0,0,153,505.2V888.8A20.2,20.2,0,0,0,173.2,909H867.8A20.2,20.2,0,0,0,888,888.8V505.2A20.2,20.2,0,0,0,867.8,485Z"
-            class="cls-8"></path>
-          <g class="cls-9">
-            <path
-              d="M867.8,485H598.38C527.64,551.89,483,649.85,483,759a386.46,386.46,0,0,0,30,150H867.8A20.2,20.2,0,0,0,888,888.8V505.2A20.2,20.2,0,0,0,867.8,485Z"
-              class="cls-10"></path>
-          </g>
-          <circle cx="701.5" cy="697.5" r="149.5" class="cls-11"></circle>
-          <path
-            d="M701.5,568a129.5,129.5,0,1,1-91.57,37.93A128.65,128.65,0,0,1,701.5,568m0-20A149.5,149.5,0,1,0,851,697.5,149.5,149.5,0,0,0,701.5,548Z"
-            class="cls-12"></path>
-          <circle cx="701.5" cy="697.5" r="120.24"></circle>
-          <circle cx="701.5" cy="697.5" r="109.27" class="cls-13"></circle>
-          <path
-            d="M701.5,608.23a89.27,89.27,0,1,1-89.27,89.27,89.38,89.38,0,0,1,89.27-89.27m0-20A109.27,109.27,0,1,0,810.77,697.5,109.27,109.27,0,0,0,701.5,588.23Z"
-            class="cls-14"></path>
-          <circle cx="701.5" cy="697.5" r="81.84"></circle>
-          <path
-            d="M648,717.16a72.23,72.23,0,0,1,72.23-72.24H751a72,72,0,0,0-49-19.2h0A72.24,72.24,0,0,0,629.72,698h0A71.92,71.92,0,0,0,648,746Z"
-            class="cls-15"></path>
-          <rect x="190" y="521" width="259" height="54" rx="27" class="cls-3"></rect>
-        </g>
-      </svg>
-    </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2231 1000" class="photobox-text">
-      <path
-        d="M215.89,483.54V611.12h-43V293H294.53q50.91,0,79.2,26.22t28.29,69q0,43.26-28.29,69.25t-79.2,26Zm0-33.64h78.64q32.34,0,48.28-17.37t15.95-43.8q0-26.43-16.06-44.13t-48.17-17.7H215.89Z">
-      </path>
-      <path
-        d="M494.43,406.42a87,87,0,0,1,30-26.54,82.32,82.32,0,0,1,39.43-9.5q37.8,0,58.87,22.72T643.86,463V611.12h-43V462.57q0-29.28-12.56-43.26t-37.47-14q-19.23,0-33.42,7.54A60.68,60.68,0,0,0,494.43,434V611.12h-43V270.32h43Z">
-      </path>
-      <path
-        d="M695.63,490.75q0-52.44,28.4-86.4t77.12-34q49.15,0,77.66,33.86t28.51,86.51v4.81q0,52.86-28.4,86.51t-77.33,33.64q-48.95,0-77.45-33.75t-28.51-86.4Zm43,4.81q0,37.57,15.84,62t47.08,24.47q30.79,0,46.75-24.47t15.95-62v-4.81q0-37.14-16.06-61.83t-47.08-24.68q-30.81,0-46.64,24.68t-15.84,61.83Z">
-      </path>
-      <path
-        d="M1019.83,317.73v57h44.79v31.9h-44.79V550.17q0,16.61,6.88,23.38t18.25,6.77a40.37,40.37,0,0,0,8.3-1,61.84,61.84,0,0,0,7.64-2.08l5.9,29.49q-4.8,3.93-14.2,6.45a71.83,71.83,0,0,1-18.57,2.51q-26.21,0-41.73-15.84t-15.51-49.7V406.64H939.22v-31.9h37.57v-57Z">
-      </path>
-      <path
-        d="M1100.66,490.75q0-52.44,28.4-86.4t77.12-34q49.15,0,77.66,33.86t28.51,86.51v4.81q0,52.86-28.4,86.51t-77.33,33.64q-48.94,0-77.45-33.75t-28.51-86.4Zm43,4.81q0,37.57,15.84,62t47.08,24.47q30.8,0,46.75-24.47t16-62v-4.81q0-37.14-16.06-61.83t-47.08-24.68q-30.79,0-46.64,24.68t-15.84,61.83Z">
-      </path>
-      <path
-        d="M1370.9,611.12V293h103.77q49.82,0,78,21.52t28.18,64.55a58.4,58.4,0,0,1-12.66,36.82q-12.67,16.27-33.65,24.79,31.24,4.38,49.48,27.09t18.25,53.52q0,43.7-28.41,66.74t-76.89,23Zm43-182.85h69.69q24,0,39.11-13.22t15.07-36.81q0-25.77-16.28-38.56t-46.86-12.78h-60.73Zm0,33.64V577.48h83q29.49,0,45.76-14.53T1559,521.77q0-26.43-16.6-42.6t-44.79-17.26h-83.67Z">
-      </path>
-      <path
-        d="M1639.4,490.75q0-52.44,28.39-86.4t77.12-34q49.15,0,77.67,33.86t28.51,86.51v4.81q0,52.86-28.4,86.51t-77.34,33.64q-48.94,0-77.45-33.75t-28.5-86.4Zm43,4.81q0,37.57,15.84,62t47.08,24.47q30.8,0,46.75-24.47t16-62v-4.81q0-37.14-16.06-61.83t-47.08-24.68q-30.79,0-46.64,24.68t-15.84,61.83Z">
-      </path>
-      <path
-        d="M1979.32,461.91l50.25-87.17h50.25l-76.69,116.88L2082,611.12h-49.37l-52.43-89.35-52.44,89.35H1878l78.86-119.5-76.68-116.88h49.59Z">
-      </path>
-      <path
-        d="M176.87,734.35V785.6h-4.42V666.21h37.3q18.54,0,28.54,9.31t10,24.72q0,15.59-10,24.85t-28.58,9.26Zm0-4.42h32.88q17,0,25.55-8.45a28.38,28.38,0,0,0,8.56-21.07q0-13-8.52-21.36t-25.59-8.41H176.87Z">
-      </path>
-      <path
-        d="M277.32,729.6v56.08h-4.43V666.3h38.87q18.86,0,29,8.15T351,698.27a29,29,0,0,1-6.43,18.33,29.65,29.65,0,0,1-17.59,10.7q12.87,2.22,18.45,9.43T351,755.18v11.23a34,34,0,0,0,1.36,10,15.44,15.44,0,0,0,4.47,7.21v2h-4.35a21.88,21.88,0,0,1-4.43-8.32,39.07,39.07,0,0,1-1.47-11.11V755.34q0-12.14-8.33-18.94t-23.74-6.8Zm0-4.43h33.62q18.29,0,26.93-7.71a24.65,24.65,0,0,0,8.66-19.19q0-13.35-8.74-20.45t-26-7.1H277.32Z">
-      </path>
-      <path d="M447,725.58h-57.4v55.59h65.77v4.43H385.15V666.21h70.19v4.43H389.57v50.51H447Z"></path>
-      <path
-        d="M533.56,778.55h.49l49.86-112.34h5V785.6h-4.43V677.12L584,677,535.61,785.6h-3.53L482.64,674.66l-.49.08V785.6h-4.43V666.21h6.15Z">
-      </path>
-      <path d="M629.42,785.6H625V666.21h4.43Z"></path>
-      <path d="M727.32,725.58h-57.4v55.59h65.77v4.43H665.5V666.21h70.19v4.43H669.92v50.51h57.4Z"></path>
-      <path
-        d="M762.09,729.6v56.08h-4.43V666.3h38.87q18.86,0,29,8.15t10.17,23.82a29,29,0,0,1-6.43,18.33,29.65,29.65,0,0,1-17.59,10.7q12.87,2.22,18.45,9.43t5.57,18.45v11.23a34.29,34.29,0,0,0,1.35,10,15.6,15.6,0,0,0,4.47,7.21v2H837.2a21.74,21.74,0,0,1-4.43-8.32,39.05,39.05,0,0,1-1.48-11.11V755.34q0-12.14-8.32-18.94t-23.74-6.8Zm0-4.43h33.62q18.28,0,26.93-7.71a24.64,24.64,0,0,0,8.65-19.19q0-13.35-8.73-20.45t-26-7.1H762.09Z">
-      </path>
-      <path
-        d="M914.52,734.35V785.6h-4.43V666.21H947.4q18.54,0,28.54,9.31t10,24.72q0,15.59-10,24.85t-28.58,9.26Zm0-4.42H947.4q17,0,25.54-8.45a28.35,28.35,0,0,0,8.57-21.07q0-13-8.52-21.36t-25.59-8.41H914.52Z">
-      </path>
-      <path d="M1096.06,785.6h-4.42v-57h-76.26v57H1011V666.21h4.43v58h76.26v-58h4.42Z"></path>
-      <path
-        d="M1213.4,734.85q0,24.18-12,38.33t-33,14.14q-21.08,0-33.09-14.14t-12-38.33V717q0-24.11,11.93-38.29t33-14.19q21,0,33,14.19T1213.4,717Zm-4.43-18q0-22-10.57-34.93t-30.1-13q-19.42,0-29.93,13t-10.49,34.93v18q0,22.14,10.54,35.09t30,13q19.52,0,30-12.92T1209,734.85Z">
-      </path>
-      <path d="M1317.78,670.64H1276v115h-4.43v-115h-44.77v-4.43h91Z"></path>
-      <path
-        d="M1421.1,734.85q0,24.18-12,38.33t-33,14.14q-21.08,0-33.09-14.14t-12-38.33V717q0-24.11,11.93-38.29t33-14.19q21,0,33,14.19t12,38.29Zm-4.43-18q0-22-10.57-34.93t-30.1-13q-19.43,0-29.93,13t-10.49,34.93v18q0,22.14,10.54,35.09t30.05,13q19.51,0,30-12.92t10.49-35.13Z">
-      </path>
-      <path d="M1550.41,725.58H1493v55.59h65.76v4.43h-70.19V666.21h70.19v4.43H1493v50.51h57.4Z"></path>
-      <path
-        d="M1581.16,785.6V666.21h35.51A46.89,46.89,0,0,1,1651.6,681q14.34,14.76,14.35,37.64v14.6q0,22.95-14.35,37.67a46.92,46.92,0,0,1-34.93,14.72Zm4.43-115V781.17h31.08a42.45,42.45,0,0,0,31.73-13.61q13.11-13.6,13.12-34.35V718.36q0-20.49-13.12-34.11a42.48,42.48,0,0,0-31.73-13.61Z">
-      </path>
-      <path d="M1701.2,785.6h-4.42V666.21h4.42Z"></path>
-      <path d="M1814.2,670.64h-41.82v115H1768v-115h-44.77v-4.43h91Z"></path>
-      <path d="M1843,785.6h-4.43V666.21H1843Z"></path>
-      <path d="M1965.07,785.6h-4.43l-76.58-111.19-.49.17v111h-4.51V666.21h4.51l76.58,110.95.49-.17V666.21h4.43Z"></path>
-      <path
-        d="M2082,769.53q-3.77,6.39-14.47,12.09t-26.28,5.7q-20.51,0-33.25-14.59t-12.75-38V715.25q0-22.47,12.38-36.61t32.22-14.15q19.11,0,30.47,9.84t10.94,25.26l-.16.49h-3.69q0-13.7-9.8-22.43t-27.76-8.73q-18.12,0-29.15,12.91t-11,33.25v19.68q0,21.33,11.4,34.73t30.18,13.41q14.34,0,23.65-4.68t12.67-10.74v-34h-36.49V729H2082Z">
-      </path>
-    </svg>
+    <img src="https://photobox.pw/banner.svg">
   </div>
   <div class="photobox-hero">
     <div class="photobox-hero-example">
-      <img class="photobox-source-image" no-zoom src="https://photobox.pw/i/examples/home/source.png" />
+      <img class="photobox-source-image" src="https://photobox.pw/i/examples/home/source.png" />
       <svg class="photobox-example-arrow" width="32" height="50" viewBox="0 0 32 50" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M30.4747 23.6861L3.43037 0.363219C2.42188 -0.503223 0.944672 0.277995 0.944672 1.67709V48.3229C0.944672 49.722 2.42188 50.5032 3.43037 49.6368L30.4747 26.3139C31.2488 25.6463 31.2488 24.3537 30.4747 23.6861Z"
